# QuantumPrac

./: CMakeLists.txt  README.md  matMul.cpp
MatrixMultiplication/: README.md
OpticCaves/: CMakeLists.txt  README.md  main.cpp
OpticCaves/Data/: phi.txt  ro  w.txt
OpticCaves/Lib/: Htc.cpp  Htc.h  unitEvolution.cpp  unitEvolution.h
OpticCavesSink/: README.md  main.cpp
OpticCavesSink/Data/: a.txt  phi.txt
OpticCavesSink/Lib/: Htc.cpp  Htc.h  declares.h  unitEvolution.cpp  unitEvolution.h
UnitEvolution/: CMakeLists.txt  H  README.md  init  initFiles.cpp  main.cpp  unitEvolution.cpp  unitEvolution.h
